--- a/src/main/resources/alrapal/mainWindow.fxml
+++ b/src/main/resources/alrapal/mainWindow.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="422.0" prefWidth="477.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="alrapal.MainWindowController">
+<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="486.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="alrapal.MainWindowController">
    <children>
       <AnchorPane fx:id="infosContainer" layoutX="11.0" layoutY="10.0" prefHeight="194.0" prefWidth="230.0">
          <children>
@@ -48,7 +48,7 @@
          </children>
       </AnchorPane>
       <Rectangle fx:id="damagesBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="195.0" layoutX="251.0" layoutY="10.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
-      <RadioButton fx:id="keepOnTop" layoutX="15.0" layoutY="394.0" mnemonicParsing="false" onMouseClicked="#keepOnTop" text="Garder au premier plan" />
+      <RadioButton fx:id="keepOnTop" layoutX="11.0" layoutY="454.0" mnemonicParsing="false" onMouseClicked="#keepOnTop" text="Garder au premier plan" />
       <Label fx:id="damages" alignment="CENTER" contentDisplay="CENTER" layoutX="303.0" layoutY="61.0" prefHeight="47.0" prefWidth="115.0" text="0" />
       <Button fx:id="calculate" defaultButton="true" layoutX="301.0" layoutY="132.0" mnemonicParsing="false" onAction="#displayDamage" prefHeight="30.0" prefWidth="120.0" text="Calculer" />
       <Label fx:id="damageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="287.0" layoutY="10.0" prefHeight="47.0" prefWidth="147.0" text="Dommages" wrapText="true">
@@ -57,13 +57,13 @@
          </font>
       </Label>
       <Button fx:id="reset" cancelButton="true" layoutX="301.0" layoutY="168.0" mnemonicParsing="false" onAction="#resetValues" prefHeight="30.0" prefWidth="120.0" text="Reset" />
-      <Rectangle fx:id="messageBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="34.0" layoutX="7.0" layoutY="214.0" stroke="BLACK" strokeType="INSIDE" width="464.0" />
-      <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="7.0" layoutY="217.0" prefHeight="27.0" prefWidth="464.0">
+      <Rectangle fx:id="messageBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="34.0" layoutX="10.0" layoutY="298.0" stroke="BLACK" strokeType="INSIDE" width="458.0" />
+      <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="302.0" prefHeight="27.0" prefWidth="458.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <GridPane fx:id="allSpellsButtons" alignment="CENTER" layoutY="272.0" prefHeight="115.0" prefWidth="475.0">
+      <GridPane fx:id="allSpellsButtons" alignment="CENTER" layoutY="332.0" prefHeight="112.0" prefWidth="478.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="250.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="247.0" />
@@ -210,7 +210,13 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </GridPane>
-      <Label fx:id="rightsLabel" layoutX="258.0" layoutY="401.0" text="Images propriété d'Ankama Games" />
+      <Label fx:id="rightsLabel" layoutX="256.0" layoutY="455.0" text="Images propriété d'Ankama Games" />
+      <Rectangle fx:id="damageMultiplicatorBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="77.0" layoutX="10.0" layoutY="213.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="458.0" />
+      <Label fx:id="damageMultiplicatorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="226.0" prefHeight="17.0" prefWidth="115.0" text="Dommages subits :" />
+      <TextField fx:id="damageMultiplicatorNameInput" layoutX="19.0" layoutY="252.0" prefHeight="26.0" prefWidth="69.0" promptText="Nom" />
+      <TextField fx:id="damageMultiplicatorValueInput" layoutX="93.0" layoutY="252.0" prefHeight="26.0" prefWidth="69.0" promptText="Valeur" />
+      <Label fx:id="damageMultiplicatorOutput" alignment="TOP_LEFT" layoutX="256.0" layoutY="217.0" prefHeight="71.0" prefWidth="210.0" />
+      <Button fx:id="add" defaultButton="true" layoutX="169.0" layoutY="250.0" mnemonicParsing="false" onAction="#updateMultiplicator" prefHeight="30.0" prefWidth="69.0" text="Ajouter" />
    </children>
    <stylesheets>
       <URL value="@mainWindow.css" />
