Starting implementing the shields and epic with autocomplete featur / json file with items

--- a/src/main/resources/alrapal/mainWindow.css
+++ b/src/main/resources/alrapal/mainWindow.css
@@ -244,9 +244,9 @@
     -fx-text-fill: white;
     -fx-font-family: Arial;
 }
-#damageMultiplicatorNameInput{
+#damageMultiplierNameInput{
 }
-#damageMultiplicatorOutput{
+#damageMultiplierOutput{
     -fx-background-color: transparent;
     -fx-text-fill: white;
     -fx-font-family: Arial;
