--- a/src/main/resources/alrapal/mainWindow.fxml
+++ b/src/main/resources/alrapal/mainWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import org.controlsfx.control.textfield.CustomTextField?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -16,54 +17,45 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="486.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="alrapal.MainWindowController">
+<?import org.controlsfx.control.textfield.CustomTextField?>
+<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="alrapal.MainWindowController">
    <children>
       <AnchorPane fx:id="infosContainer" layoutX="11.0" layoutY="10.0" prefHeight="194.0" prefWidth="230.0">
          <children>
-            <Rectangle fx:id="infosBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="195.0" layoutX="-2.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="235.0" />
+            <Rectangle fx:id="infosBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="125.0" layoutX="-2.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="235.0" />
             <TextField fx:id="resFixes" alignment="CENTER" layoutX="172.0" layoutY="39.0" onAction="#handleResFixInput" prefHeight="27.0" prefWidth="54.0" text="0" />
             <TextField fx:id="resPercentage" alignment="CENTER" layoutX="172.0" layoutY="78.0" onAction="#handleResPercentageInput" prefHeight="27.0" prefWidth="54.0" text="0" />
-            <TextField fx:id="boost" alignment="CENTER" layoutX="172.0" layoutY="116.0" onAction="#handleBoostInput" prefHeight="27.0" prefWidth="54.0" text="0" />
             <ImageView fx:id="resFixPicture" fitHeight="15.0" fitWidth="15.0" layoutX="140.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fx:id="resPerPicture" fitHeight="15.0" fitWidth="15.0" layoutX="140.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="boostPicture" fitHeight="27.0" fitWidth="26.0" layoutX="135.0" layoutY="116.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="labelResAir" contentDisplay="CENTER" layoutX="4.0" layoutY="38.0" prefHeight="27.0" prefWidth="125.0" text="Résistances air fixes" />
-            <Label fx:id="labelResPercentageAir" contentDisplay="CENTER" layoutX="4.0" layoutY="77.0" prefHeight="27.0" prefWidth="125.0" text="Résistances air %" />
-            <Label fx:id="labelBoostSynchro" contentDisplay="CENTER" layoutX="4.0" layoutY="116.0" prefHeight="27.0" prefWidth="125.0" text="Boosts synchro (%)" />
-            <RadioButton fx:id="synchroLvl1" layoutX="125.0" layoutY="155.0" mnemonicParsing="false" onAction="#synchroIsLvl1">
-               <toggleGroup>
-                  <ToggleGroup fx:id="selectLvl" />
-               </toggleGroup></RadioButton>
-            <RadioButton fx:id="synchroLvl2" layoutX="159.0" layoutY="155.0" mnemonicParsing="false" onAction="#synchroIsLvl2" toggleGroup="$selectLvl" />
-            <RadioButton fx:id="synchroLvl3" layoutX="194.0" layoutY="155.0" mnemonicParsing="false" onAction="#synchroIsLvl3" selected="true" toggleGroup="$selectLvl" />
-            <Label fx:id="labelLvl1" layoutX="130.0" layoutY="173.0" text="1" />
-            <Label fx:id="labelLvl2" layoutX="163.0" layoutY="173.0" text="2" />
-            <Label fx:id="labelLvl3" layoutX="199.0" layoutY="173.0" text="3" />
-            <Label fx:id="labelLvl" layoutX="4.0" layoutY="155.0" prefHeight="17.0" prefWidth="102.0" text="Niveau du sort :" />
-            <Label fx:id="titleInfos" alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" prefHeight="47.0" prefWidth="196.0" text="Résistances et boosts" wrapText="true">
+            <Label fx:id="labelResAir" contentDisplay="CENTER" layoutX="6.0" layoutY="38.0" prefHeight="27.0" prefWidth="125.0" text="Résistances air fixes" />
+            <Label fx:id="labelResPercentageAir" contentDisplay="CENTER" layoutX="6.0" layoutY="77.0" prefHeight="27.0" prefWidth="125.0" text="Résistances air %" />
+            <Label fx:id="titleInfos" alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" prefHeight="47.0" prefWidth="196.0" text="Adversaire" wrapText="true">
                <font>
                   <Font size="19.0" />
                </font>
             </Label>
+            <Rectangle fx:id="damageMultiplierBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="112.0" layoutX="-2.0" layoutY="133.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="235.0" />
+            <Label fx:id="damageMultiplierLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="3.0" layoutY="138.0" prefHeight="17.0" prefWidth="115.0" text="Dommages subits :" />
+            <TextField fx:id="damageMultiplierNameInput" layoutX="4.0" layoutY="158.0" prefHeight="27.0" prefWidth="69.0" promptText="Nom" />
+            <TextField fx:id="damageMultiplierValueInput" layoutX="83.0" layoutY="158.0" prefHeight="27.0" prefWidth="69.0" promptText="Valeur" />
+            <Button fx:id="add" defaultButton="true" layoutX="163.0" layoutY="156.0" mnemonicParsing="false" onAction="#updateDamageMultiplier" prefHeight="30.0" prefWidth="62.0" text="Ajouter" />
+            <Label fx:id="damageMultiplierOutput" alignment="CENTER" contentDisplay="CENTER" layoutX="3.0" layoutY="189.0" prefHeight="49.0" prefWidth="226.0" />
          </children>
       </AnchorPane>
-      <Rectangle fx:id="damagesBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="195.0" layoutX="251.0" layoutY="10.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
-      <RadioButton fx:id="keepOnTop" layoutX="11.0" layoutY="454.0" mnemonicParsing="false" onMouseClicked="#keepOnTop" text="Garder au premier plan" />
-      <Label fx:id="damages" alignment="CENTER" contentDisplay="CENTER" layoutX="303.0" layoutY="61.0" prefHeight="47.0" prefWidth="115.0" text="0" />
-      <Button fx:id="calculate" defaultButton="true" layoutX="301.0" layoutY="132.0" mnemonicParsing="false" onAction="#displayDamage" prefHeight="30.0" prefWidth="120.0" text="Calculer" />
-      <Label fx:id="damageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="287.0" layoutY="10.0" prefHeight="47.0" prefWidth="147.0" text="Dommages" wrapText="true">
+      <Rectangle fx:id="SynchroBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="125.0" layoutX="251.0" layoutY="10.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
+      <RadioButton fx:id="keepOnTop" layoutX="11.0" layoutY="471.0" mnemonicParsing="false" onMouseClicked="#keepOnTop" text="Garder au premier plan" />
+      <Label fx:id="SynchroLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="287.0" layoutY="10.0" prefHeight="47.0" prefWidth="147.0" text="Synchro" wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="reset" cancelButton="true" layoutX="301.0" layoutY="168.0" mnemonicParsing="false" onAction="#resetValues" prefHeight="30.0" prefWidth="120.0" text="Reset" />
-      <Rectangle fx:id="messageBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="34.0" layoutX="10.0" layoutY="298.0" stroke="BLACK" strokeType="INSIDE" width="458.0" />
-      <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="302.0" prefHeight="27.0" prefWidth="458.0">
+      <Rectangle fx:id="messageBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="34.0" layoutX="10.0" layoutY="336.0" stroke="BLACK" strokeType="INSIDE" width="458.0" />
+      <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="340.0" prefHeight="27.0" prefWidth="458.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <GridPane fx:id="allSpellsButtons" alignment="CENTER" layoutY="332.0" prefHeight="112.0" prefWidth="478.0">
+      <GridPane fx:id="allSpellsButtons" alignment="CENTER" layoutY="366.0" prefHeight="112.0" prefWidth="478.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.0" minWidth="10.0" prefWidth="250.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.0" minWidth="10.0" prefWidth="247.0" />
@@ -210,13 +202,37 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </GridPane>
-      <Label fx:id="rightsLabel" layoutX="256.0" layoutY="455.0" text="Images propriété d'Ankama Games" />
-      <Rectangle fx:id="damageMultiplicatorBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="77.0" layoutX="10.0" layoutY="213.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="458.0" />
-      <Label fx:id="damageMultiplicatorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="70.0" layoutY="226.0" prefHeight="17.0" prefWidth="115.0" text="Dommages subits :" />
-      <TextField fx:id="damageMultiplicatorNameInput" layoutX="19.0" layoutY="252.0" prefHeight="26.0" prefWidth="69.0" promptText="Nom" />
-      <TextField fx:id="damageMultiplicatorValueInput" layoutX="93.0" layoutY="252.0" prefHeight="26.0" prefWidth="69.0" promptText="Valeur" />
-      <Label fx:id="damageMultiplicatorOutput" alignment="TOP_LEFT" layoutX="256.0" layoutY="217.0" prefHeight="71.0" prefWidth="210.0" />
-      <Button fx:id="add" defaultButton="true" layoutX="169.0" layoutY="250.0" mnemonicParsing="false" onAction="#updateMultiplicator" prefHeight="30.0" prefWidth="69.0" text="Ajouter" />
+      <Label fx:id="rightsLabel" layoutX="257.0" layoutY="478.0" text="Images propriété d'Ankama Games" />
+      <TextField fx:id="boost" alignment="CENTER" layoutX="409.0" layoutY="48.0" onAction="#handleBoostInput" prefHeight="27.0" prefWidth="54.0" text="0" />
+      <ImageView fx:id="boostPicture" fitHeight="27.0" fitWidth="26.0" layoutX="375.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="labelBoostSynchro" contentDisplay="CENTER" layoutX="256.0" layoutY="47.0" prefHeight="27.0" prefWidth="125.0" text="Boosts synchro (%)" />
+      <RadioButton fx:id="synchroLvl1" layoutX="360.0" layoutY="90.0" mnemonicParsing="false" onAction="#synchroIsLvl1" prefHeight="20.0" prefWidth="20.0" textFill="WHITE">
+         <toggleGroup>
+            <ToggleGroup fx:id="selectLvl" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="synchroLvl2" layoutX="395.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl2" prefHeight="20.0" prefWidth="20.0" toggleGroup="$selectLvl" />
+      <RadioButton fx:id="synchroLvl3" layoutX="430.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl3" prefHeight="20.0" prefWidth="20.0" selected="true" toggleGroup="$selectLvl" />
+      <Label fx:id="labelLvl1" layoutX="371.0" layoutY="111.0" text="1" />
+      <Label fx:id="labelLvl2" layoutX="406.0" layoutY="111.0" text="2" />
+      <Label fx:id="labelLvl3" layoutX="445.0" layoutY="111.0" text="3" />
+      <Label fx:id="labelLvl" layoutX="257.0" layoutY="93.0" prefHeight="17.0" prefWidth="102.0" text="Niveau du sort :" />
+      <Rectangle fx:id="damagesBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="71.0" layoutX="11.0" layoutY="259.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="458.0" />
+      <Rectangle fx:id="shieldMultiplierBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="112.0" layoutX="251.0" layoutY="143.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
+      <Label fx:id="damageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="145.0" layoutY="270.0" prefHeight="47.0" prefWidth="147.0" text="Dommages:" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="reset" cancelButton="true" layoutX="29.0" layoutY="296.0" mnemonicParsing="false" onAction="#resetValues" prefHeight="30.0" prefWidth="120.0" text="Reset" />
+      <Button fx:id="calculate" defaultButton="true" layoutX="29.0" layoutY="263.0" mnemonicParsing="false" onAction="#displayDamage" prefHeight="30.0" prefWidth="120.0" text="Calculer" />
+      <Label fx:id="rangedDamages" alignment="CENTER" contentDisplay="CENTER" layoutX="352.0" layoutY="261.0" prefHeight="34.0" prefWidth="115.0" text="0" />
+      <Label fx:id="meleeDamages" alignment="CENTER" contentDisplay="CENTER" layoutX="352.0" layoutY="294.0" prefHeight="34.0" prefWidth="115.0" text="0" />
+      <ImageView fx:id="rangedDamagePicture" fitHeight="15.0" fitWidth="15.0" layoutX="319.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="meleeDamagePicture" fitHeight="15.0" fitWidth="15.0" layoutX="319.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="damageMultiplierLabel1" alignment="CENTER" layoutX="251.0" layoutY="149.0" prefHeight="17.0" prefWidth="202.0" text="Boucliers et items légendaires" />
+      <CustomTextField fx:id="shieldAndEpicInput" layoutX="257.0" layoutY="167.0" prefHeight="26.0" prefWidth="102.0" />
+
    </children>
    <stylesheets>
       <URL value="@mainWindow.css" />
