--- a/src/main/resources/alrapal/mainWindow.fxml
+++ b/src/main/resources/alrapal/mainWindow.fxml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import org.controlsfx.control.textfield.CustomTextField?>
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import java.net.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+<?import org.controlsfx.control.textfield.*?>
 
-<?import org.controlsfx.control.textfield.CustomTextField?>
-<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="alrapal.MainWindowController">
+<AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="alrapal.MainWindowController">
    <children>
       <AnchorPane fx:id="infosContainer" layoutX="11.0" layoutY="10.0" prefHeight="194.0" prefWidth="230.0">
          <children>
@@ -43,7 +34,7 @@
          </children>
       </AnchorPane>
       <Rectangle fx:id="SynchroBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="125.0" layoutX="251.0" layoutY="10.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
-      <RadioButton fx:id="keepOnTop" layoutX="11.0" layoutY="471.0" mnemonicParsing="false" onMouseClicked="#keepOnTop" text="Garder au premier plan" />
+      <RadioButton fx:id="keepOnTop" layoutX="10.0" layoutY="477.0" mnemonicParsing="false" onMouseClicked="#keepOnTop" text="Garder au premier plan" />
       <Label fx:id="SynchroLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="287.0" layoutY="10.0" prefHeight="47.0" prefWidth="147.0" text="Synchro" wrapText="true">
          <font>
             <Font size="18.0" />
@@ -232,6 +223,8 @@
       <ImageView fx:id="meleeDamagePicture" fitHeight="15.0" fitWidth="15.0" layoutX="319.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="damageMultiplierLabel1" alignment="CENTER" layoutX="251.0" layoutY="149.0" prefHeight="17.0" prefWidth="202.0" text="Boucliers et items légendaires" />
       <CustomTextField fx:id="shieldAndEpicInput" layoutX="257.0" layoutY="167.0" prefHeight="26.0" prefWidth="102.0" />
+      <Button fx:id="addShield" defaultButton="true" layoutX="384.0" layoutY="165.0" mnemonicParsing="false" onAction="#updateShieldMultiplier" prefHeight="30.0" prefWidth="62.0" text="Ajouter" />
+      <Label fx:id="shieldMultiplierOutput" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="199.0" prefHeight="49.0" prefWidth="202.0" />
 
    </children>
    <stylesheets>
