--- a/src/main/resources/alrapal/mainWindow.fxml
+++ b/src/main/resources/alrapal/mainWindow.fxml
@@ -20,17 +20,17 @@
             <ImageView fx:id="resPerPicture" fitHeight="15.0" fitWidth="15.0" layoutX="140.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="labelResAir" contentDisplay="CENTER" layoutX="6.0" layoutY="38.0" prefHeight="27.0" prefWidth="125.0" text="Résistances air fixes" />
             <Label fx:id="labelResPercentageAir" contentDisplay="CENTER" layoutX="6.0" layoutY="77.0" prefHeight="27.0" prefWidth="125.0" text="Résistances air %" />
-            <Label fx:id="titleInfos" alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" prefHeight="47.0" prefWidth="196.0" text="Adversaire" wrapText="true">
+            <Label fx:id="enemyInfos" alignment="CENTER" contentDisplay="CENTER" layoutX="19.0" prefHeight="47.0" prefWidth="196.0" text="Adversaire" wrapText="true">
                <font>
                   <Font size="19.0" />
                </font>
             </Label>
             <Rectangle fx:id="damageMultiplierBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="112.0" layoutX="-2.0" layoutY="133.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="235.0" />
-            <Label fx:id="damageMultiplierLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="3.0" layoutY="138.0" prefHeight="17.0" prefWidth="115.0" text="Dommages subits :" />
+            <Label fx:id="damageMultiplierLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="3.0" layoutY="136.0" prefHeight="17.0" prefWidth="115.0" text="Dommages subits :" />
             <TextField fx:id="damageMultiplierNameInput" layoutX="4.0" layoutY="158.0" prefHeight="27.0" prefWidth="69.0" promptText="Nom" />
             <TextField fx:id="damageMultiplierValueInput" layoutX="83.0" layoutY="158.0" prefHeight="27.0" prefWidth="69.0" promptText="Valeur" />
             <Button fx:id="add" defaultButton="true" layoutX="163.0" layoutY="156.0" mnemonicParsing="false" onAction="#updateDamageMultiplier" prefHeight="30.0" prefWidth="62.0" text="Ajouter" />
-            <Label fx:id="damageMultiplierOutput" alignment="CENTER" contentDisplay="CENTER" layoutX="3.0" layoutY="189.0" prefHeight="49.0" prefWidth="226.0" />
+            <Label fx:id="damageMultiplierOutput" alignment="TOP_LEFT" layoutX="3.0" layoutY="189.0" prefHeight="49.0" prefWidth="226.0" />
          </children>
       </AnchorPane>
       <Rectangle fx:id="SynchroBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="125.0" layoutX="251.0" layoutY="10.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
@@ -40,8 +40,8 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Rectangle fx:id="messageBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="34.0" layoutX="10.0" layoutY="336.0" stroke="BLACK" strokeType="INSIDE" width="458.0" />
-      <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="340.0" prefHeight="27.0" prefWidth="458.0">
+      <Rectangle fx:id="messageBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="34.0" layoutX="10.0" layoutY="335.0" stroke="BLACK" strokeType="INSIDE" width="458.0" />
+      <Label fx:id="infoLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="339.0" prefHeight="27.0" prefWidth="458.0">
          <font>
             <Font size="14.0" />
          </font>
@@ -197,17 +197,17 @@
       <TextField fx:id="boost" alignment="CENTER" layoutX="409.0" layoutY="48.0" onAction="#handleBoostInput" prefHeight="27.0" prefWidth="54.0" text="0" />
       <ImageView fx:id="boostPicture" fitHeight="27.0" fitWidth="26.0" layoutX="375.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="labelBoostSynchro" contentDisplay="CENTER" layoutX="256.0" layoutY="47.0" prefHeight="27.0" prefWidth="125.0" text="Boosts synchro (%)" />
-      <RadioButton fx:id="synchroLvl1" layoutX="360.0" layoutY="90.0" mnemonicParsing="false" onAction="#synchroIsLvl1" prefHeight="20.0" prefWidth="20.0" textFill="WHITE">
+      <RadioButton fx:id="synchroLvl1" layoutX="369.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl1" prefHeight="20.0" prefWidth="20.0" textFill="WHITE">
          <toggleGroup>
             <ToggleGroup fx:id="selectLvl" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="synchroLvl2" layoutX="395.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl2" prefHeight="20.0" prefWidth="20.0" toggleGroup="$selectLvl" />
-      <RadioButton fx:id="synchroLvl3" layoutX="430.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl3" prefHeight="20.0" prefWidth="20.0" selected="true" toggleGroup="$selectLvl" />
-      <Label fx:id="labelLvl1" layoutX="371.0" layoutY="111.0" text="1" />
-      <Label fx:id="labelLvl2" layoutX="406.0" layoutY="111.0" text="2" />
-      <Label fx:id="labelLvl3" layoutX="445.0" layoutY="111.0" text="3" />
-      <Label fx:id="labelLvl" layoutX="257.0" layoutY="93.0" prefHeight="17.0" prefWidth="102.0" text="Niveau du sort :" />
+      <RadioButton fx:id="synchroLvl2" layoutX="404.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl2" prefHeight="20.0" prefWidth="20.0" toggleGroup="$selectLvl" />
+      <RadioButton fx:id="synchroLvl3" layoutX="439.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl3" prefHeight="20.0" prefWidth="20.0" selected="true" toggleGroup="$selectLvl" />
+      <Label fx:id="labelLvl1" layoutX="374.0" layoutY="111.0" text="1" />
+      <Label fx:id="labelLvl2" layoutX="409.0" layoutY="111.0" text="2" />
+      <Label fx:id="labelLvl3" layoutX="444.0" layoutY="111.0" text="3" />
+      <Label fx:id="labelLvl" layoutX="257.0" layoutY="89.0" prefHeight="17.0" prefWidth="102.0" text="Niveau du sort :" />
       <Rectangle fx:id="damagesBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="71.0" layoutX="11.0" layoutY="259.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="458.0" />
       <Rectangle fx:id="shieldMultiplierBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="112.0" layoutX="251.0" layoutY="143.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
       <Label fx:id="damageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="145.0" layoutY="270.0" prefHeight="47.0" prefWidth="147.0" text="Dommages:" wrapText="true">
@@ -215,16 +215,16 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="reset" cancelButton="true" layoutX="29.0" layoutY="296.0" mnemonicParsing="false" onAction="#resetValues" prefHeight="30.0" prefWidth="120.0" text="Reset" />
+      <Button fx:id="reset" cancelButton="true" layoutX="29.0" layoutY="296.0" mnemonicParsing="false" onAction="#resetAllValues" prefHeight="30.0" prefWidth="120.0" text="Reset" />
       <Button fx:id="calculate" defaultButton="true" layoutX="29.0" layoutY="263.0" mnemonicParsing="false" onAction="#displayDamage" prefHeight="30.0" prefWidth="120.0" text="Calculer" />
-      <Label fx:id="rangedDamages" alignment="CENTER" contentDisplay="CENTER" layoutX="352.0" layoutY="261.0" prefHeight="34.0" prefWidth="115.0" text="0" />
-      <Label fx:id="meleeDamages" alignment="CENTER" contentDisplay="CENTER" layoutX="352.0" layoutY="294.0" prefHeight="34.0" prefWidth="115.0" text="0" />
-      <ImageView fx:id="rangedDamagePicture" fitHeight="15.0" fitWidth="15.0" layoutX="319.0" layoutY="269.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="meleeDamagePicture" fitHeight="15.0" fitWidth="15.0" layoutX="319.0" layoutY="302.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="damageMultiplierLabel1" alignment="CENTER" layoutX="251.0" layoutY="149.0" prefHeight="17.0" prefWidth="202.0" text="Boucliers et items légendaires" />
-      <CustomTextField fx:id="shieldAndEpicInput" layoutX="257.0" layoutY="167.0" prefHeight="26.0" prefWidth="102.0" />
-      <Button fx:id="addShield" defaultButton="true" layoutX="384.0" layoutY="165.0" mnemonicParsing="false" onAction="#updateShieldMultiplier" prefHeight="30.0" prefWidth="62.0" text="Ajouter" />
-      <Label fx:id="shieldMultiplierOutput" alignment="CENTER" contentDisplay="CENTER" layoutX="258.0" layoutY="199.0" prefHeight="49.0" prefWidth="202.0" />
+      <Label fx:id="rangedDamages" layoutX="317.0" layoutY="261.0" prefHeight="34.0" prefWidth="147.0" text="Distance" />
+      <Label fx:id="meleeDamages" layoutX="317.0" layoutY="294.0" prefHeight="34.0" prefWidth="147.0" text="Mêlée" />
+      <ImageView fx:id="rangedDamagePicture" fitHeight="15.0" fitWidth="15.0" layoutX="292.0" layoutY="271.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="meleeDamagePicture" fitHeight="15.0" fitWidth="15.0" layoutX="292.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="shieldLabel" alignment="CENTER" layoutX="246.0" layoutY="146.0" prefHeight="17.0" prefWidth="202.0" text="Boucliers et items légendaires :" />
+      <CustomTextField fx:id="shieldAndEpicInput" layoutX="257.0" layoutY="167.0" prefHeight="26.0" prefWidth="134.0" promptText="Chercher un item" />
+      <Button fx:id="addShield" defaultButton="true" layoutX="399.0" layoutY="165.0" mnemonicParsing="false" onAction="#updateShieldMultiplier" prefHeight="30.0" prefWidth="62.0" text="Ajouter" />
+      <Label fx:id="shieldMultiplierOutput" alignment="TOP_LEFT" layoutX="258.0" layoutY="199.0" prefHeight="49.0" prefWidth="202.0" />
 
    </children>
    <stylesheets>
