--- a/src/main/resources/alrapal/mainWindow.fxml
+++ b/src/main/resources/alrapal/mainWindow.fxml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
-<?import javafx.scene.text.Font?>
-<?import org.controlsfx.control.textfield.CustomTextField?>
-<?import java.net.URL?>
+<?import javafx.scene.text.*?>
+<?import org.controlsfx.control.textfield.*?>
+
 <AnchorPane fx:id="mainRoot" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="478.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="alrapal.MainWindowController">
    <children>
       <AnchorPane fx:id="infosContainer" layoutX="11.0" layoutY="10.0" prefHeight="194.0" prefWidth="230.0">
          <children>
             <Rectangle fx:id="infosBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="125.0" layoutX="-2.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="235.0" />
-            <TextField fx:id="resFixes" alignment="CENTER" layoutX="172.0" layoutY="39.0" onAction="#handleResFixInput" prefHeight="27.0" prefWidth="54.0" text="0" />
-            <TextField fx:id="resPercentage" alignment="CENTER" layoutX="172.0" layoutY="78.0" onAction="#handleResPercentageInput" prefHeight="27.0" prefWidth="54.0" text="0" />
+            <TextField fx:id="resFixes" alignment="CENTER" layoutX="172.0" layoutY="39.0" prefHeight="27.0" prefWidth="54.0" text="0" />
+            <TextField fx:id="resPercentage" alignment="CENTER" layoutX="172.0" layoutY="78.0" prefHeight="27.0" prefWidth="54.0" text="0" />
             <ImageView fx:id="resFixPicture" fitHeight="15.0" fitWidth="15.0" layoutX="140.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fx:id="resPerPicture" fitHeight="15.0" fitWidth="15.0" layoutX="140.0" layoutY="84.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="labelResAir" contentDisplay="CENTER" layoutX="6.0" layoutY="38.0" prefHeight="27.0" prefWidth="125.0" text="Résistances air fixes" />
@@ -194,20 +195,10 @@
          </padding>
       </GridPane>
       <Label fx:id="rightsLabel" layoutX="257.0" layoutY="478.0" text="Images propriété d'Ankama Games" />
-      <TextField fx:id="boost" alignment="CENTER" layoutX="409.0" layoutY="54.0" onAction="#handleBoostInput" prefHeight="27.0" prefWidth="54.0" text="0" />
+      <TextField fx:id="boost" alignment="CENTER" layoutX="409.0" layoutY="54.0" prefHeight="27.0" prefWidth="54.0" text="0" />
       <ImageView fx:id="boostPicture" fitHeight="27.0" fitWidth="26.0" layoutX="375.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="labelBoostSynchro" contentDisplay="CENTER" layoutX="256.0" layoutY="54.0" prefHeight="27.0" prefWidth="125.0" text="Boosts synchro (%)" />
-      <RadioButton fx:id="synchroLvl1" layoutX="369.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl1" prefHeight="20.0" prefWidth="20.0" textFill="WHITE">
-         <toggleGroup>
-            <ToggleGroup fx:id="selectLvl" />
-         </toggleGroup>
-      </RadioButton>
-      <RadioButton fx:id="synchroLvl2" layoutX="404.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl2" prefHeight="20.0" prefWidth="20.0" toggleGroup="$selectLvl" />
-      <RadioButton fx:id="synchroLvl3" layoutX="439.0" layoutY="87.0" mnemonicParsing="false" onAction="#synchroIsLvl3" prefHeight="20.0" prefWidth="20.0" selected="true" toggleGroup="$selectLvl" />
-      <Label fx:id="labelLvl1" layoutX="374.0" layoutY="111.0" text="1" />
-      <Label fx:id="labelLvl2" layoutX="409.0" layoutY="111.0" text="2" />
-      <Label fx:id="labelLvl3" layoutX="444.0" layoutY="111.0" text="3" />
-      <Label fx:id="labelLvl" layoutX="257.0" layoutY="89.0" prefHeight="17.0" prefWidth="102.0" text="Niveau du sort :" />
+      <Label fx:id="baseDamageLabel" layoutX="257.0" layoutY="89.0" prefHeight="17.0" prefWidth="102.0" text="Base dommages" />
       <Rectangle fx:id="damagesBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="71.0" layoutX="11.0" layoutY="259.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="458.0" />
       <Rectangle fx:id="shieldMultiplierBackground" arcHeight="5.0" arcWidth="5.0" fill="#131239" height="112.0" layoutX="251.0" layoutY="143.0" stroke="BLACK" strokeLineCap="ROUND" strokeType="INSIDE" width="219.0" />
       <Label fx:id="damageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="145.0" layoutY="270.0" prefHeight="47.0" prefWidth="147.0" text="Dommages:" wrapText="true">
@@ -227,6 +218,7 @@
       <Button fx:id="removeShield" layoutX="433.0" layoutY="165.0" mnemonicParsing="false" onAction="#removeShieldMultiplier" prefHeight="30.0" prefWidth="30.0" text="-" />
       <ListView fx:id="shieldMultiplierOutput" layoutX="254.0" layoutY="199.0" prefHeight="55.0" prefWidth="210.0" />
       <Button fx:id="resetSynchro" cancelButton="true" layoutX="343.0" layoutY="19.0" mnemonicParsing="false" onAction="#newSynchro" prefHeight="30.0" prefWidth="120.0" text="Nouvelle Synchro" />
+      <TextField fx:id="baseDamageInput" alignment="CENTER" layoutX="409.0" layoutY="84.0" prefHeight="27.0" prefWidth="54.0" promptText="368" />
 
    </children>
    <stylesheets>
