Last base damage is exported and imported from a .txt file. #4

--- a/src/main/resources/alrapal/mainWindow.css
+++ b/src/main/resources/alrapal/mainWindow.css
@@ -209,6 +209,7 @@
     -fx-graphic: url('Images/desynchronisationSelected.png');
 }
 #infoLabel{
+    -fx-font-family: Arial;
     -fx-text-fill: white;
 }
 #calculate{
